feature/PUPPET-900 Написал REST эндпоинт

--- a/src/main/resources/db/changelog/1.0.0/master.yaml
+++ b/src/main/resources/db/changelog/1.0.0/master.yaml
@@ -3,6 +3,9 @@ databaseChangeLog:
       file: create-extension-uuid-ossp.sql
       relativeToChangelogFile: true
   - include:
+      file: create-table-requisites.sql
+      relativeToChangelogFile: true
+  - include:
       file: create-table-users.sql
       relativeToChangelogFile: true
   - include:
