--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+logging:
+  level:
+    root: info
+    com.aston.frontendpracticeservice.aspect.LoggingAspect: debug
+  file:
+    name: logs/app.log
