--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: "3"
 
 services:
-  credit-service:
-    container_name: $CI_PROJECT_NAME
-    image: $AND_DOCKER_REGISTRY_NAME/$PROGECT-$APP:$CI_COMMIT_SHA
+  app:
+    build: .
+    container_name: app
     ports:
       - 9002:8080
     restart: always
@@ -11,13 +11,75 @@ services:
       - /logs/credit:/logs
     networks:
       - a-tink-test
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5434/postgres
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
     deploy:
       resources:
         limits:
           cpus: "0.5"
           memory: "512M"
 
+  postgres:
+    image: postgres:14
+    container_name: postgres_container
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5434:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - a-tink-test
+
+  elasticsearch:
+    image: elasticsearch:7.11.1
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+    ports:
+      - "9200:9200"
+    networks:
+      - elk
+
+  logstash:
+    image: logstash:7.11.1
+    container_name: logstash
+    volumes:
+      - ./logs/app.log:/usr/share/logstash/logs/app.log
+      - ./elk/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - "5044:5044"
+    networks:
+      - a-tink-test
+      - elk
+    depends_on:
+      - elasticsearch
+
+  kibana:
+    image: kibana:7.11.1
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    networks:
+      - elk
+    depends_on:
+      - elasticsearch
+
+volumes:
+  postgres_data:
+
 networks:
   a-tink-test:
-    external: true
+    driver: bridge
+  elk:
     driver: bridge
